jujugui/static/gui/src/app/components/panel/_panel.scss
.panel-component {
    @extend %floating-panel;
    position: absolute;
    z-index: 601;
}

.panel-component.inspector-panel {
    background-color: transparent;
    border-radius: none;
    box-shadow: none;
    top: $environment-header-height + ($panel-space * 2) + $navbar-height;
    bottom: $deployer-bar-height + $panel-space;
    left: $panel-space;
    width: $left-panel-width;
}

.panel-component.white-box {
    position: absolute;
    z-index: 1000;
    top: $navbar-height;
    bottom: $deployer-bar-height;
    left: 0;
    right: 0;
    padding: 0 0 0 $panel-space;
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: inherit;
    box-shadow: none;
    overflow: auto;
}

